2011-05-27  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* conf/YarpVersion.cmake: bump to version 2.3.4

2011-05-26  Marco Randazzo    <marco.randazzo@iit.it>
	
	* src/libYARP_dev/include/yarp/dev/ControlBoardInterfaces.h
	* src/libYARP_dev/include/yarp/dev/ControlBoardInterfacesImpl.h
	* src/libYARP_dev/src/ControlBoardInterfacesImpl.cpp
	* src/libYARP_dev/src/RemoteControlBoard.cpp
	The following methods of yarp::dev::IImpedanceControl have been deprecated:
	bool getImpedance(int j, double *stiffness, double *damping, double *offset)
	bool setImpedance(int j, double stiffness,  double damping,  double offset)
	Instead, use the new methods:
	bool getImpedance(int j, double *stiffness, double *damping)
	bool setImpedance(int j, double stiffness,  double damping)
	
2011-05-26  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/PortCore.cpp: fix race condition
	when multiple processes try to connect the same two
	ports [thanks Andrea Del Prete] [thanks Lorenzo Natale]

2011-05-23  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/include/yarp/os/impl/NameserCarrier.h:
	strip quotation marks in content sent using classic
	"name_ser" protocol.  There are YARP name servers still
	in service that don't understand quotation marks.
	[thanks Valerio Sperati]

2011-05-19 Alessandro Scalzo <alessandro.scalzo@iit.it>
	* src/libYARP_OS/src/Run.cpp
	* src/libYARP_OS/include/yarp/os/Run.h
	Changed port naming protocol.

2011-05-19  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* example/swig/yarp.i: patch from Stephane to implement
	ImageOfPixelRgbFloat [thanks Stephane Lallee]

2011-05-18  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/harness/PortTest.cpp: fix broken "yarp read ... /test"
	command [thanks Andrea Del Prete] [thanks Ugo Pattacini]

2011-05-07  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/Port.cpp: add replyAndDrop method, to more
	easily handle connections that may only carry one message and then