@@ -65,7 +65,7 @@ bool DeviceResponder::read(ConnectionReader& connection) {
     if (response.size()>=1) {
         ConnectionWriter *writer = connection.getWriter();
         if (writer!=NULL) {
-            if (response.get(0).toString()=="many") {
+            if (response.get(0).toString()=="many"&&writer->isTextMode()) {
                 for (int i=1; i<response.size(); i++) {
                     Value& v = response.get(i);
                     if (v.isList()) {
